адаптив под смартфоны

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -69,3 +69,10 @@ body {
     line-height: 45px;
     @include f600;
 }
+
+img,
+.img {
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+}
