--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -29,6 +29,12 @@
   .header__menu {
     display: none;
   }
+  .header__search-form {
+    left: 50%;
+  }
+  .collections {
+    padding-bottom: 0;
+  }
   .categories__inner {
     height: 40px;
   }
@@ -36,7 +42,126 @@
   .categories__inner--right {
     display: none;
   }
+  .collections__item-wrapper {
+    flex-wrap: wrap;
+  }
+  .collections__item-left {
+    max-width: 100%;
+  }
+  .collections__item-right {
+    max-width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+  .collections__item-right__inner {
+    padding-top: 10%;
+  }
+  .new-items {
+    padding: 0;
+  }
   footer__item {
     padding: 15px 15px;
   }
 }
+
+@media (max-width: 800px) {
+  .header__search-form {
+    width: 300px;
+  }
+}
+
+@media (max-width: 768px) {
+  .menu-item.delivery {
+    display: none;
+  }
+  .collections__item-right {
+    max-width: 100%;
+    flex-direction: column;
+  }
+  .collections__item-right__img img,
+  .projects__card-inner img {
+    min-height: 100%;
+    max-width: 100%;
+    object-fit: cover;
+  }
+  .footer__inner {
+    padding: 100px 80px 0;
+  }
+}
+
+@media (max-width: 700px) {
+  .header__phone {
+    display: none;
+  }
+  .header__search-form {
+    width: 150px;
+  }
+}
+
+@media (max-width: 600px) {
+  .slider__item-info,
+  .collections__item-left__info {
+    left: 50px;
+  }
+  .footer__inner {
+    padding: 100px 15px 0;
+  }
+}
+
+@media (max-width: 550px) {
+  .header__search-form {
+    left: 55%;
+    width: 100px;
+  }
+  .header__btn-menu.icon-user {
+    display: none;
+  }
+  .slider__title,
+  .collections__item-left__title {
+    font-size: 50px;
+    line-height: 60px;
+    max-width: 300px;
+  }
+}
+
+@media (max-width: 450px) {
+  .header__search-form {
+    left: 60%;
+    width: 90px;
+  }
+}
+
+@media (max-width: 414px) {
+  .header__logo {
+    font-size: 14px;
+  }
+  .header__search-form {
+    left: 55%;
+  }
+}
+
+@media (max-width: 375px) {
+  .slider__title,
+  .collections__item-left__title {
+    font-size: 40px;
+    line-height: 50px;
+    max-width: 280px;
+  }
+  .slider__item-info,
+  .collections__item-left__info {
+    left: 10px;
+  }
+  .header__search-form {
+    left: 50%;
+  }
+  .header__search-form::before {
+    content: '';
+  }
+}
+
+@media (max-width: 340px) {
+  .header__search-form {
+    left: 47%;
+  }
+}
+
