--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,10 +4,16 @@
 
 // start header
 .header {
-  background-color: #fff;
+  background-color:$white;
+  width: 100%;
 
   &__top {
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    display: flex;
+    z-index: 2;
     overflow-x: hidden;
     overflow-y: hidden;
     background-color: $header-top-bg;
@@ -22,12 +28,22 @@
     justify-content: space-between;
     height: 90px;
     align-items: center;
+    transition: 0.6s;
   }
+
+  &__top-inner.sticky {
+    height: 45px;
+  }
+
 
   &__box--left,
   &__box--right {
     display: flex;
     align-items: center;
+  }
+
+  &__box--left {
+    padding-right: 400px;
   }
 
   &__logo {
@@ -195,6 +211,7 @@
 // start categories
 .categories {
   position: relative;
+  padding-top: 100px;
 
   &__inner {
     display: flex;
@@ -237,7 +254,7 @@
     &-submenu.categories__submenu {
       background-color: $peach;
       position: absolute;
-      top: 80px;
+      top: 180px;
       left: 0;
       width: 100%;
       overflow: hidden;
@@ -1219,8 +1236,10 @@
       cursor: pointer;
     }
 
-    &-pivacyPolicy:hover,
     &-termsOfUse:hover {
+      color: $text;
+    }
+    &-pivacyPolicy:hover {
       color: $text;
     }
   }
@@ -1319,7 +1338,7 @@
 .hamburger {
   position: relative;
   right: 50%;
-  top: 0%;
+  top: 0;
   z-index: 2;
   width: 18px;
   height: 18px;
@@ -1327,6 +1346,9 @@
   float: right;
   transition: all 0.3s ease-out;
   transform: translateX(50%);
+  &.on {
+    top: 10px;
+  }
 }
 
 .hamburger .hamburger__span {
@@ -1353,7 +1375,7 @@
 
 // start sidebar
 .menu {
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100%;
   height: 100vh;
