--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -156,27 +156,24 @@
 }
 
 @media (max-width: 500px) {
-  .header__search-form {
-    left: 60%;
-    width: 90px;
-  }
-  .header__btn-menu {
-    margin-left: 25px;
-  }
-}
-
-@media (max-width: 414px) {
   .header__logo {
     font-size: 14px;
   }
   .header__search-form {
     left: 55%;
+    width: 90px;
+  }
+  .header__btn-menu {
+    margin-left: 25px;
+  }
+  .header__box--left {
+    padding-right: 140px;
   }
 }
 
 @media (max-width: 400px) {
   .header__box--left {
-    padding-right: 130px;
+    padding-right: 100px;
   }
 }
 
